--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@nuxt/ui": "^4.1.0",
+    "@pinia/nuxt": "^0.11.2",
     "nuxt": "^4.2.0",
+    "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
