--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.11.0",
     "@nuxt/ui": "^4.1.0",
     "@pinia/nuxt": "^0.11.2",
     "nuxt": "^4.2.0",
