--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@nuxt/image": "^1.11.0",
     "@nuxt/ui": "^4.1.0",
     "@pinia/nuxt": "^0.11.2",
+    "@tauri-apps/api": "^2.9.0",
     "nuxt": "^4.2.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.9.1"
+    "@tauri-apps/cli": "^2.9.1",
+    "@types/node": "^24.10.0"
   }
 }
