--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,4 +24,6 @@ log = "0.4"
 tauri = { version = "2.9.1", features = [] }
 tauri-plugin-log = "2"
 tauri-plugin-shell = "2"
+reqwest = "0.12.24"
+tokio = "1.48.0"
 
